--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,27 +2,28 @@ version: "3.4"
 
 services:
   nginx-base:
-    image: dsdatsme/nginx:base
+    image: ${CONTAINER_REPO}/nginx:base
     build:
       context: ./
       target: base
+      args:
+        - BASE_OS=nginx:mainline-bookworm
     ports:
       - "80:80"
   nginx1:
-    image: dsdatsme/nginx:1
+    extends:
+      service: nginx-base
+    image: ${CONTAINER_REPO}/nginx:1
     build:
-      context: ./
       target: nginx1
       args:
         APP_ENV: development
-    ports:
-      - "8001:80"
   nginx2:
-    image: dsdatsme/nginx:2
+    extends:
+      service: nginx-base
+    image: ${CONTAINER_REPO}/nginx:2
     build:
-      context: ./
       target: nginx2
       args:
         APP_ENV: production
-    ports:
-      - "8002:80"
+        BASE_OS: nginx:1.24.0-bullseye
